--- a/css/index.css
+++ b/css/index.css
@@ -124,7 +124,7 @@
     .txt1 h2,
     .txt1 h4 {
         display: block;
-        animation: textAni 1.8s linear infinite;
+        animation: textAni 1.8s;
     }
     @keyframes textAni {
         0% {
@@ -155,6 +155,7 @@
     /* profile */
     #profile {
         position: relative;
+        animation: slide 1s ease-out;
     }
     #profile .wrap {
         position: absolute;
@@ -166,7 +167,26 @@
         justify-content: space-between;
         gap: 20px;
     }
-
+    @keyframes slide {
+        from {
+            left: -100px;
+            opacity: 0;
+        }
+        to {
+            left: 100px;
+            opacity: 1;
+        }
+    }
+    @keyframes disappear {
+        from {
+            left: 100px;
+            opacity: 1;
+        }
+        to {
+            left: -100px;
+            opacity: 0;
+        }
+    }
     #profile .wrap > li {
         width: calc(100% / 3);
         height: 100%;
@@ -733,7 +753,7 @@
     .txt1 h2,
     .txt1 h4 {
         display: block;
-        animation: textAni 1.8s linear infinite;
+        animation: textAni 1.8s;
     }
     @keyframes textAni {
         0% {
@@ -1318,7 +1338,7 @@
     .txt1 h2,
     .txt1 h4 {
         display: block;
-        animation: textAni 1.8s linear infinite;
+        animation: textAni 1.8s;
     }
     @keyframes textAni {
         0% {
