--- a/css/index.css
+++ b/css/index.css
@@ -152,12 +152,11 @@
         background-attachment: fixed;
     }
 
-    /* profile */
-    #profile {
+    /* con1 */
+    #con1 {
         position: relative;
-        
     }
-    #profile .wrap {
+    #con1 .wrap {
         position: absolute;
         top: 50%;
         left: 50%;
@@ -167,30 +166,48 @@
         justify-content: space-between;
         gap: 20px;
     }
-  
-    #profile .wrap > li {
+    #con1 li {
+        transform: translateY(100px);
+        transition: 0.5s;
+        opacity: 0;
+    }
+    #con1.on li {
+        transform: translateY(0);
+        opacity: 1;
+    }
+    #con1 li:nth-child(1) {
+        transition-delay: 0s;
+    }
+    #con1 li:nth-child(2) {
+        transition-delay: 0.2s;
+    }
+    #con1 li:nth-child(3) {
+        transition-delay: 0.4s;
+    }
+
+    #con1 .wrap > li {
         width: calc(100% / 3);
         height: 100%;
     }
-    #profile .wrap > li:nth-child(2) {
+    #con1 .wrap > li:nth-child(2) {
         border-right: 1px solid #ccc;
         padding-right: 40px;
         box-sizing: border-box;
     }
-    #profile .wrap > li:nth-child(3) {
+    #con1 .wrap > li:nth-child(3) {
         padding-left: 40px;
         box-sizing: border-box;
     }
-    #profile .wrap h3 {
+    #con1 .wrap h3 {
         font-size: 25px;
     }
-    #profile .wrap img {
+    #con1 .wrap img {
         width: 300px;
         height: 360px;
         object-fit: cover;
         margin: 20px 0px;
     }
-    #profile .wrap h4 {
+    #con1 .wrap h4 {
         margin-bottom: 10px;
         border-top: 1px solid #ccc;
         padding: 30px 0px;
@@ -199,10 +216,10 @@
         font-weight: 400;
         letter-spacing: 2px;
     }
-    #profile .wrap h4:first-child {
+    #con1 .wrap h4:first-child {
         border-top: 0px;
     }
-    #profile .wrap p {
+    #con1 .wrap p {
         margin-bottom: 15px;
         font-weight: bold;
         color: #464646;
@@ -291,15 +308,15 @@
 
     /* portfolio */
 
-    #portfolio1 {
+    #con2 {
         background-image: url(../img/con1.JPG);
         position: relative;
     }
-    #portfolio2 {
+    #con3 {
         background-image: url(../img/con2.JPG);
         position: relative;
     }
-    #portfolio3 {
+    #con4 {
         background-image: url(../img/con3.JPG);
         position: relative;
     }
@@ -762,10 +779,10 @@
     }
 
     /* profile */
-    #profile {
+    #con1 {
         position: relative;
     }
-    #profile .wrap {
+    #con1 .wrap {
         position: absolute;
         top: 50%;
         left: 50%;
@@ -775,29 +792,47 @@
         justify-content: space-between;
         gap: 10px;
     }
-    #profile .wrap > li {
+    #con1 li {
+        transform: translateY(100px);
+        transition: 0.5s;
+        opacity: 0;
+    }
+    #con1.on li {
+        transform: translateY(0);
+        opacity: 1;
+    }
+    #con1 li:nth-child(1) {
+        transition-delay: 0s;
+    }
+    #con1 li:nth-child(2) {
+        transition-delay: 0.2s;
+    }
+    #con1 li:nth-child(3) {
+        transition-delay: 0.4s;
+    }
+    #con1 .wrap > li {
         width: calc(100% / 3);
         height: 100%;
     }
-    #profile .wrap > li:nth-child(2) {
+    #con1 .wrap > li:nth-child(2) {
         border-right: 1px solid #ccc;
         padding-right: 40px;
         box-sizing: border-box;
     }
-    #profile .wrap > li:nth-child(3) {
+    #con1 .wrap > li:nth-child(3) {
         padding-left: 40px;
         box-sizing: border-box;
     }
-    #profile .wrap h3 {
+    #con1 .wrap h3 {
         font-size: 25px;
     }
-    #profile .wrap img {
+    #con1 .wrap img {
         width: 250px;
         height: 300px;
         object-fit: cover;
         margin: 20px 0px;
     }
-    #profile .wrap h4 {
+    #con1 .wrap h4 {
         margin-bottom: 10px;
         border-top: 1px solid #ccc;
         padding: 30px 0px;
@@ -806,10 +841,10 @@
         font-weight: 400;
         letter-spacing: 2px;
     }
-    #profile .wrap h4:first-child {
+    #con1 .wrap h4:first-child {
         border-top: 0px;
     }
-    #profile .wrap p {
+    #con1 .wrap p {
         margin-bottom: 15px;
         font-weight: bold;
         color: #464646;
@@ -896,15 +931,15 @@
     }
 
     /* portfolio */
-    #portfolio1 {
+    #con2 {
         background-image: url(../img/con1.JPG);
         position: relative;
     }
-    #portfolio2 {
+    #con3 {
         background-image: url(../img/con2.JPG);
         position: relative;
     }
-    #portfolio3 {
+    #con4 {
         background-image: url(../img/con3.JPG);
         position: relative;
     }
@@ -1335,6 +1370,7 @@
     /* container */
     #container {
         width: 100%;
+        height: 100%;
     }
     #visual,
     section {
@@ -1347,10 +1383,10 @@
     }
 
     /* profile */
-    #profile {
+    #con1 {
         position: relative;
     }
-    #profile .wrap {
+    #con1 .wrap {
         position: absolute;
         top: 50%;
         left: 50%;
@@ -1358,38 +1394,58 @@
         width: 70%;
         display: block;
     }
-    #profile .wrap span {
+    #con1 li {
+        transform: translateY(100px);
+        transition: 0.5s;
+        opacity: 0;
+    }
+    #con1.on li {
+        transform: translateY(0);
+        opacity: 1;
+    }
+    #con1 li:nth-child(1) {
+        transition-delay: 0s;
+    }
+    #con1 li:nth-child(2) {
+        transition-delay: 0.2s;
+    }
+    #con1 li:nth-child(3) {
+        transition-delay: 0.4s;
+    }
+    #con1 .wrap span {
         /* 글자테두리선 */
         -webkit-text-stroke: 2px rgb(91, 191, 224);
         /* 글자색 투명 */
         color: transparent;
     }
 
-    #profile .wrap h3 {
+    #con1 .wrap h3 {
         font-size: 25px;
     }
-    #profile .wrap img {
+    #con1 .wrap img {
         width: 100%;
-        height: 360px;
+        height: 250px;
         object-fit: cover;
         margin: 20px 0px;
     }
-    #profile .wrap h4 {
+    #con1 .wrap h4 {
         margin-bottom: 10px;
         border-top: 1px solid #ccc;
-        padding: 30px 0px;
+        padding: 10px 0px;
         box-sizing: border-box;
         font-family: "Anton", sans-serif;
         font-weight: 400;
         letter-spacing: 2px;
+        font-size: 14px;
     }
-    #profile .wrap h4:first-child {
+    #con1 .wrap h4:first-child {
         border-top: 0px;
     }
-    #profile .wrap p {
+    #con1 .wrap p {
         margin-bottom: 15px;
         font-weight: bold;
         color: #464646;
+        font-size: 12px;
     }
 
     /* skil */
@@ -1403,12 +1459,12 @@
     .profile_skill .skil3,
     .profile_skill .skil4,
     .profile_skill .skil5 {
-        width: 50px;
-        height: 50px;
-        line-height: 50px;
-        border-radius: 25px;
+        width: 40px;
+        height: 40px;
+        line-height: 40px;
+        border-radius: 20px;
         text-align: center;
-        font-size: 20px;
+        font-size: 12px;
     }
     .profile_skill .skil1 {
         color: orange;
@@ -1433,15 +1489,15 @@
     }
 
     /* portfolio */
-    #portfolio1 {
+    #con2 {
         background-image: url(../img/con1.JPG);
         position: relative;
     }
-    #portfolio2 {
+    #con3 {
         background-image: url(../img/con2.JPG);
         position: relative;
     }
-    #portfolio3 {
+    #con4 {
         background-image: url(../img/con3.JPG);
         position: relative;
     }
