--- a/css/index.css
+++ b/css/index.css
@@ -11,16 +11,16 @@
         object-fit: cover;
     }
     header {
-        background-color: #fff;
-        position: fixed;
-        z-index: 10;
         width: 100%;
         height: 80px;
         display: flex;
         justify-content: space-between;
         align-items: center;
-        border-bottom: 1px solid #ccc;
-        box-shadow: 1px 1px 3px #6e6e6e;
+        background-color: rgba(0, 0, 0, 0.3);
+        padding: 20px;
+        box-sizing: border-box;
+        position: fixed;
+        z-index: 10;
     }
     header h1 {
         width: 100%;
@@ -54,7 +54,7 @@
     ul a .char::before,
     ul a .char::after {
         content: attr(data-char);
-        color: #222;
+        color: #fff;
         position: absolute;
         left: 0;
         top: 0;
@@ -88,7 +88,13 @@
 
     /* visual */
     #visual {
-        background-image: url(../img/visual.bg.png);
+        width: 100%;
+        height: 100vh;
+        background-image: linear-gradient(
+            -45deg,
+            rgba(255, 0, 0, 0),
+            rgb(0, 132, 255)
+        );
         position: relative;
     }
 
@@ -98,17 +104,64 @@
         left: 50%;
         transform: translateX(-50%);
         text-align: center;
+        /* opacity: 0; */
+        color: #fff;
     }
+    .wrapper {
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        width: 235px;
+        height: 70px;
+        white-space: nowrap;
+    }
+
+    .focus {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        font-family: Arial;
+        text-transform: uppercase;
+        letter-spacing: 2px;
+        filter: blur(3px);
+        font-size: 65px;
+        opacity: 0.6;
+        color: #fff;
+    }
+
+    .text {
+        transform: translateX(0);
+        animation: text 2.5s ease infinite alternate;
+    }
+
+    @keyframes mask {
+        to {
+            transform: translateX(170px);
+        }
+    }
+
+    @keyframes text {
+        to {
+            transform: translateX(-170px);
+        }
+    }
+
     #visual .txt1 h2 {
-        color: rgb(2, 2, 32);
+        background: linear-gradient(to bottom, #0d2bd4, #4abcdf);
+        color: transparent;
+        -webkit-background-clip: text;
         letter-spacing: 7px;
-        font-size: 100px;
+        font-size: 9vw;
         font-family: "Anton", sans-serif;
         font-weight: 400;
     }
     #visual .txt1 h4 {
-        margin-top: 20px;
-        font-size: 24px;
+        margin-top: 15%;
+        font-size: 2vw;
+    }
+    #visual .txt1 span {
+        font-size: 3vw;
     }
     /* 글자 애니메이션 */
     .txt1 {
@@ -138,6 +191,53 @@
         }
     }
 
+    /* scroll */
+    .scroll {
+        position: absolute;
+        left: 50%;
+        bottom: 10%;
+        transform: translateX(-50%);
+        display: flex;
+        gap: 20px;
+    }
+    .scroll p {
+        color: #fff;
+        font-size: 1vw;
+        font-weight: bold;
+    }
+    .bar {
+        width: 6px;
+        height: 20px;
+        background-color: rgba(255, 255, 255, 0.5);
+        border-radius: 2.5px;
+    }
+    /* 스크롤 동그라미 */
+    .circle {
+        width: 100%;
+        height: 6px;
+        border-radius: 50%;
+        background-color: #fff;
+
+        animation: move 2s infinite;
+    }
+    @keyframes move {
+        0% {
+            opacity: 0;
+            transform: translateY(0px);
+        }
+        30% {
+            opacity: 1;
+            transform: translateY(0px);
+        }
+        80% {
+            opacity: 1;
+            transform: translateY(14px);
+        }
+        100% {
+            opacity: 0;
+            transform: translateY(14px);
+        }
+    }
     /* container */
     #container {
         width: 100%;
@@ -171,6 +271,7 @@
         transition: 0.5s;
         opacity: 0;
     }
+
     #con1.on li {
         transform: translateY(0);
         opacity: 1;
@@ -632,6 +733,7 @@
     body {
         overflow-x: hidden;
     }
+
     /* header */
     header h1 img {
         width: 150px;
@@ -639,16 +741,16 @@
         object-fit: cover;
     }
     header {
-        background-color: #fff;
-        position: fixed;
-        z-index: 10;
         width: 100%;
         height: 80px;
         display: flex;
         justify-content: space-between;
         align-items: center;
-        border-bottom: 1px solid #ccc;
-        box-shadow: 1px 1px 3px #6e6e6e;
+        background-color: rgba(0, 0, 0, 0.3);
+        padding: 20px;
+        box-sizing: border-box;
+        position: fixed;
+        z-index: 10;
     }
     header h1 {
         width: 100%;
@@ -682,7 +784,7 @@
     ul a .char::before,
     ul a .char::after {
         content: attr(data-char);
-        color: #222;
+        color: #fff;
         position: absolute;
         left: 0;
         top: 0;
@@ -707,6 +809,7 @@
     ul a:hover .char::after {
         transform: translateY(-100%);
     }
+
     /* 모바일용 메뉴 숨김 */
     .icon,
     .nav a {
@@ -715,7 +818,13 @@
 
     /* visual */
     #visual {
-        background-image: url(../img/visual.bg.png);
+        width: 100%;
+        height: 100vh;
+        background-image: linear-gradient(
+            -45deg,
+            rgba(255, 0, 0, 0),
+            rgb(0, 132, 255)
+        );
         position: relative;
     }
 
@@ -725,17 +834,24 @@
         left: 50%;
         transform: translateX(-50%);
         text-align: center;
+        /* opacity: 0; */
+        color: #fff;
     }
     #visual .txt1 h2 {
-        color: rgb(2, 2, 32);
+        background: linear-gradient(to bottom, #0d2bd4, #4abcdf);
+        color: transparent;
+        -webkit-background-clip: text;
         letter-spacing: 7px;
-        font-size: 100px;
+        font-size: 8rem;
         font-family: "Anton", sans-serif;
         font-weight: 400;
     }
     #visual .txt1 h4 {
-        margin-top: 20px;
-        font-size: 24px;
+        margin-top: 15%;
+        font-size: 2rem;
+    }
+    #visual .txt1 span {
+        font-size: 3rem;
     }
     /* 글자 애니메이션 */
     .txt1 {
@@ -762,6 +878,54 @@
             transform: translate3d(0, -90px, 0) skewY(-10deg);
 
             transform-origin: top left;
+        }
+    }
+
+    /* scroll */
+    .scroll {
+        position: absolute;
+        left: 50%;
+        bottom: 10%;
+        transform: translateX(-50%);
+        display: flex;
+        gap: 20px;
+    }
+    .scroll p {
+        color: #fff;
+        font-size: 1rem;
+        font-weight: bold;
+    }
+    .bar {
+        width: 6px;
+        height: 20px;
+        background-color: rgba(255, 255, 255, 0.5);
+        border-radius: 2.5px;
+    }
+    /* 스크롤 동그라미 */
+    .circle {
+        width: 100%;
+        height: 6px;
+        border-radius: 50%;
+        background-color: #fff;
+
+        animation: move 2s infinite;
+    }
+    @keyframes move {
+        0% {
+            opacity: 0;
+            transform: translateY(0px);
+        }
+        30% {
+            opacity: 1;
+            transform: translateY(0px);
+        }
+        80% {
+            opacity: 1;
+            transform: translateY(14px);
+        }
+        100% {
+            opacity: 0;
+            transform: translateY(14px);
         }
     }
     /* container */
@@ -1254,32 +1418,7 @@
     body {
         overflow-x: hidden;
     }
-    /* header */
-    header h1 img {
-        width: 150px;
-        height: 150px;
-        object-fit: cover;
-    }
-    header {
-        background-color: #fff;
-        position: fixed;
-        z-index: 10;
-        width: 100%;
-        height: 80px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        border-bottom: 1px solid #ccc;
-        box-shadow: 1px 1px 3px #6e6e6e;
-    }
-    header h1 {
-        width: 100%;
-    }
-    header ul {
-        width: 100%;
-        display: none;
-        justify-content: space-between;
-    }
+
     /* 모바일용 메뉴 */
 
     .icon {
@@ -1287,11 +1426,14 @@
         position: absolute;
         top: 10px;
         right: 10px;
-        background-color: #fff;
         width: 50px;
         height: 30px;
         line-height: 30px;
         text-align: center;
+        font-size: 2rem;
+    }
+    .icon a {
+        color: #fff;
     }
     .nav {
         display: none;
@@ -1304,6 +1446,7 @@
         box-sizing: border-box;
     }
     .nav a {
+        font-size: 1rem;
         margin-bottom: 20px;
         display: block;
         color: #fff;
@@ -1313,12 +1456,92 @@
         padding-bottom: 2px;
         box-sizing: border-box;
         width: 100px;
-        border-bottom: 2px solid pink;
+        border-bottom: 2px solid lightblue;
+    }
+
+    /* header */
+    header h1 img {
+        width: 150px;
+        height: 150px;
+        object-fit: cover;
+    }
+    header {
+        width: 100%;
+        height: 80px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        background-color: rgba(0, 0, 0, 0.3);
+        padding: 20px;
+        box-sizing: border-box;
+        position: fixed;
+        z-index: 10;
+    }
+    header h1 {
+        width: 100%;
+    }
+    header ul {
+        display: none;
+    }
+    header ul li {
+        width: calc(100% / 3);
+        text-align: center;
+    }
+    header ul li a {
+        font-family: "Open Sans", sans-serif;
+        font-weight: bold;
+    }
+
+    ul.on {
+        transform: translateY(-100%);
+    }
+    /* 원래 글씨 안보이게 */
+    ul a .char {
+        color: transparent;
+        position: relative;
+        display: inline-block;
+        overflow: hidden;
+    }
+
+    /* 움직일 글씨 하나로 겹치게 */
+    ul a .char::before,
+    ul a .char::after {
+        content: attr(data-char);
+        color: #fff;
+        position: absolute;
+        left: 0;
+        top: 0;
+        opacity: 0.6;
+
+        /* 이동하는거 보이게 */
+        transition: transform 0.3s;
+        /* 자동계산 :: 0.03초 곱하기 var(변수)  */
+        transition-delay: calc(30ms * var(--char-index));
+    }
+
+    /* 글씨 하나는 밑에 있게 */
+    ul a .char::before {
+        transform: translateY(100%);
+    }
+
+    /* 마우스가져다두면 위치 맞추기 */
+    ul a:hover .char::before {
+        transform: translateY(0);
+        opacity: 1;
+    }
+    ul a:hover .char::after {
+        transform: translateY(-100%);
     }
 
     /* visual */
     #visual {
-        background-image: url(../img/visual.bg.png);
+        width: 100%;
+        height: 100vh;
+        background-image: linear-gradient(
+            -45deg,
+            rgba(255, 0, 0, 0),
+            rgb(0, 132, 255)
+        );
         position: relative;
     }
 
@@ -1328,17 +1551,24 @@
         left: 50%;
         transform: translateX(-50%);
         text-align: center;
+        /* opacity: 0; */
+        color: #fff;
     }
     #visual .txt1 h2 {
-        color: rgb(2, 2, 32);
+        background: linear-gradient(to bottom, #0d2bd4, #4abcdf);
+        color: transparent;
+        -webkit-background-clip: text;
         letter-spacing: 7px;
-        font-size: 60px;
+        font-size: 5rem;
         font-family: "Anton", sans-serif;
         font-weight: 400;
     }
     #visual .txt1 h4 {
-        margin-top: 20px;
-        font-size: 14px;
+        margin-top: 15%;
+        font-size: 2rem;
+    }
+    #visual .txt1 span {
+        font-size: 3rem;
     }
     /* 글자 애니메이션 */
     .txt1 {
@@ -1365,6 +1595,54 @@
             transform: translate3d(0, -90px, 0) skewY(-10deg);
 
             transform-origin: top left;
+        }
+    }
+
+    /* scroll */
+    .scroll {
+        position: absolute;
+        left: 50%;
+        bottom: 10%;
+        transform: translateX(-50%);
+        display: flex;
+        gap: 20px;
+    }
+    .scroll p {
+        color: #fff;
+        font-size: 1rem;
+        font-weight: bold;
+    }
+    .bar {
+        width: 6px;
+        height: 20px;
+        background-color: rgba(255, 255, 255, 0.5);
+        border-radius: 2.5px;
+    }
+    /* 스크롤 동그라미 */
+    .circle {
+        width: 100%;
+        height: 6px;
+        border-radius: 50%;
+        background-color: #fff;
+
+        animation: move 2s infinite;
+    }
+    @keyframes move {
+        0% {
+            opacity: 0;
+            transform: translateY(0px);
+        }
+        30% {
+            opacity: 1;
+            transform: translateY(0px);
+        }
+        80% {
+            opacity: 1;
+            transform: translateY(14px);
+        }
+        100% {
+            opacity: 0;
+            transform: translateY(14px);
         }
     }
     /* container */
@@ -1487,7 +1765,6 @@
         color: rgb(255, 0, 221);
         border: 2px solid rgb(255, 0, 221);
     }
-
     /* portfolio */
     #con2 {
         background-image: url(../img/con1.JPG);
